# CORE2017

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Notes.txt  build.properties  build.xml
ARM/: CMakeLists.txt
Paths/: Field Dimensions.txt  Important Points.txt  PathfinderTest.cpp  backupFromBoiler.csv  backupFromHopper.csv  driveForward.csv  farHopperToBoiler.csv  gearAuton_forward_boiler.csv  gearAuton_forward_center.csv  gearAuton_forward_feeder.csv  gearAuton_reverse_boiler.csv  gearAuton_reverse_center.csv  gearAuton_reverse_feeder.csv  gearBoilerAuton_reverse_boiler.csv  gearBoilerAuton_reverse_center.csv  wallToFarHopper.csv  wallToHopper.csv
src/: ClimberSubsystem.cpp  ClimberSubsystem.h  Constants.h  DriveSubsystem.cpp  DriveSubsystem.h  GearPickupSubsystem.cpp  GearPickupSubsystem.h  GearSubsystem.cpp  GearSubsystem.h  HopperSubsystem.cpp  HopperSubsystem.h  Robot.cpp  Robot.h  VisionSubsystem.cpp  VisionSubsystem.h
src/Autonomous/: 2GearAuton.cpp  2GearAuton.h  Actions.h  AntiTitaniumAuton.cpp  AntiTitaniumAuton.h  AutonPaths.cpp  AutonPaths.h  Autons.h  BoilerOnlyAuton.cpp  BoilerOnlyAuton.h  DoNothingAuton.cpp  DoNothingAuton.h  DriveForwardAuton.cpp  DriveForwardAuton.h  DumpBallsAuton.cpp  DumpBallsAuton.h  GearBoilerAuton.cpp  GearBoilerAuton.h  GearBoilerHopper.cpp  GearBoilerHopper.h  GearBoilerHopperAuton.cpp  GearBoilerHopperAuton.h  GearHopperAuton.cpp  GearHopperAuton.h  GearHopperBoilerAuton.cpp  GearHopperBoilerAuton.h  GearOnlyAuton.cpp  GearOnlyAuton.h  HopperBoilerAuton.cpp  HopperBoilerAuton.h  IntakeBallsAuton.cpp  IntakeBallsAuton.h  LoadGearOntoPegAuton.cpp  LoadGearOntoPegAuton.h  TitaniumAuton.cpp  TitaniumAuton.h  TurnAngleAuton.cpp  VisionAlignGearAuton.cpp  VisionAlignGearAuton.h  VisionGetBallsAuton.cpp
src/Autonomous/Actions/: DriveDistance.cpp  DriveDistance.h  DriveDistanceAction.cpp  DriveDistanceAction.h  DriveForwardWithoutPathAction.cpp  DriveForwardWithoutPathAction.h  DriveShiftAction.cpp  DriveShiftAction.h  DriveWaypointAction.cpp  DriveWaypointAction.h  DumpBalls.cpp  DumpBalls.h  DumpBallsAction.cpp  DumpBallsAction.h  GearFlapAction.cpp  GearFlapAction.h  GearPunchAction.cpp  GearPunchAction.h  HopperFlapAction.cpp  HopperFlapAction.h  IntakeBalls.h  IntakeBallsAction.cpp  IntakeBallsAction.h  LoadGearOntoPegAction.cpp  LoadGearOntoPegAction.h  PickupGearAction.cpp  PickupGearAction.h  PickupGearWithVisionAction.cpp  PickupGearWithVisionAction.h  SetLiftPositionAction.cpp  SetLiftPositionAction.h  ShimmyAction.cpp  ShimmyAction.h  TurnAngle.cpp  TurnAngle.h  TurnAngleAction.cpp  TurnAngleAction.h  VisionAlignGearAction.cpp  VisionAlignGearAction.h  VisionGetBallsAction.cpp  (+3 more)
src/Controllers/: DriveGyroController.cpp  DriveGyroController.h  DriveHybridController.cpp  DriveHybridController.h  DriveOpenController.cpp  DriveOpenController.h  DriveWaypointController.cpp  DriveWaypointController.h
